--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,8 +1,8 @@
-header {
+#navbar {
     
     width: 100%;
     height: 90px;
-    background-color: white;
+    background-color: #f9f9f9;
    // z-index: 1000;
     
 }
@@ -28,7 +28,7 @@ header {
     font-size: 1.3rem;
     text-align: center;
     position: fixed;
-    background-color: white;
+    background-color: #f9f9f9;
     z-index: 1000;
     width: 100%;
     transition: all 0.4s linear;
@@ -46,7 +46,7 @@ header {
         width: 17px;
     }
 }
-header > nav {
+#navbar > nav {
     display: flex;
     flex-direction: column;
    // background-color: aqua;
@@ -89,7 +89,7 @@ header > nav {
     .message, .hamburger {
         display: none;
     }
-    header > nav {
+    #navbar > nav {
         flex-direction: row;
         height: 48px;
         padding: 0;
@@ -106,7 +106,7 @@ header > nav {
         //transition: all 0.4s linear;
         //transform: translateY(0%);
         z-index: 1000;
-        background-color: white;
+        background-color: #f9f9f9;
         a {
             font-size: 1.2rem;
             
