--- a/src/pages/marketplace/MarketPlace.scss
+++ b/src/pages/marketplace/MarketPlace.scss
@@ -58,6 +58,7 @@
         width: 913px;
         height: 91px;
         font-size: 24px;
+        margin-left: 4rem;
        
        
     }
@@ -86,8 +87,10 @@
     font-size: 16px;
     margin-top: 1rem;
     margin-bottom: 3rem;
+   // width: 100%;
    
 }
+
 .flex {
     width: 100%;
 }
@@ -101,6 +104,7 @@
         border-bottom: 6px solid #AFB091;
         border-radius: 4px;
         margin-bottom: 4rem;
+        width: 244px;
         img {
             margin-right: 0.8rem;
         }
@@ -111,18 +115,25 @@
         margin-bottom: 2rem;
     }
     .art-card {
-        background-color: red;
+        background-color: white;
         height: 414px;
         width: 269px;
         display: grid;
         place-items: center;
+        box-shadow: 0px 34px 68px rgba(217, 225, 244, 0.36);
+        border-radius: 15px;
+       
        
         
     }
     .artworks {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(269px, 1fr));
-        grid-gap: 1rem;
+        grid-gap: 1.35rem;
+        grid-row-gap: 2rem;
+        margin-left: 2.3rem;
+        margin-top: 2rem;
+        padding: 0.3rem 0;
     }
     .art-img {
         width: 241px;
@@ -155,26 +166,55 @@
     .deets {
         flex-direction: column;
         width: 100%;
+        margin: 0 0 0 1.7rem;
+        :first-child {
+            font-size: 21px;
+            font-weight: 400;
+           
+        }
+        :last-child {
+            font-size: 28px;
+            font-weight: 700;
+            margin-top: 2.5rem;
+        }
+    }
+    .see-more {
+        margin-top: 8rem;
+        font-size: 30px;
+        font-weight: 500;
+        width: 249px;
+        height: 73px;
+        border:  1px solid #333333;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
 //end artwork section
-#marketplace {
-   main > .hide-desktop {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        width: 100%;
-        font-size: 20px;
-        .arrow {
-            width: 45px;
-            height: 45px;
-            border: 1px solid #616161;
-            border-radius: 50%;
-            padding: 0.55rem;
-            margin: auto 1.2rem auto 0.8rem;
-        }
+
+.load-more {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    font-size: 20px;
+    .arrow {
+        width: 45px;
+        height: 45px;
+        border: 1px solid #616161;
+        border-radius: 50%;
+        padding: 0.55rem;
+        margin: auto 1.2rem auto 0.8rem;
     }
 }
 
+
+@media only screen and (min-width:760px) {
+    .load-more {
+        display: none;
+    }
+    
+}
 
