--- a/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
+++ b/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
@@ -141,7 +141,7 @@
    // margin: auto 0.3rem;
     overflow: hidden;
     display: flex;
-    border: 1px solid black;  
+    border: 1px solid #cccccc;  
     position: relative;
     height: 509px;
     
@@ -151,7 +151,7 @@
     display: flex;
    // left: -400px;
     height: 100%;
-    //width: 100%;
+    width: 100%;
     position: absolute;
     transition: left 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
     //justify-content: center;
@@ -172,16 +172,18 @@
    
     
 }
+.slide-heart {
+    width: 53px;
+    float: right;
+    margin: 1rem 1rem 1.5rem;
+}
 .slide{
     flex: 0 0 auto;  
-    
+    width: 100%;
    float: left;
    position: relative;
-  //width: 800px;
-   
    padding: 0.7rem;
-  // max-width: 398px;
-  // background-color: #006CA2;
+ 
 }
 .slide-info, .slide-price {
     display: flex;
@@ -197,7 +199,7 @@
     }
 }
 .slide-control {
-    border: 1px solid white;
+    border: 1px solid ;
     width: 59px;
     height: 59px;
     border-radius: 50%;
@@ -212,6 +214,35 @@
     width: 90%;
     left: 5%;
     top: 40%;
+}
+.explore {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem auto ;
+    width: 313px;
+    height: 91px;
+    font-size: 36px;
+    background:linear-gradient(94.97deg, #78A3AD 24.64%, rgba(192, 86, 9, 0.49) 118.54%) ;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+.explore::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    border-radius: 16px;
+    background:linear-gradient(94.97deg, #78A3AD 24.64%, rgba(192, 86, 9, 0.49) 118.54%);
+    --webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0) ;
+   // webkit-mask-composite: xor;
+   //maxk-composite:exclude;
+   // border: 1px solid;
+    //border-image-slice: 1;
+    //border-image-source: linear-gradient(94.97deg, #78A3AD 24.64%, rgba(192, 86, 9, 0.49) 118.54%);
+   
+
 }
 @media only screen and (min-width: 960px) {
     #marketplace-detail {
@@ -347,24 +378,44 @@
         margin-left: 2rem;
     }
     .slider {
-        overflow-x: scroll;
+        overflow-x: visible;
         max-width: 100%;
         border: none;
+        // height: 579px;
     }
    
     .slide-img {
         background-size: cover;
         background-position: center;
-        width: 446px;
+        width: 95%;
         height: 421px;
+        margin: auto;
         
 
+    }
+    .slide-info{
+        width: 95%;
+        margin: 1rem auto 0;
     }
     .more {
         display: none;
     }
     .slide{
+       // padding: auto 2rem;
+        margin: auto 0.7rem;
+        border: 1px solid #cccccc;
+        width: 100%;
         
-        margin: auto 1rem;
+        
+    }
+    .slider-wrapper {
+        max-width: 100%;
+        overflow-x: scroll;
+        border: none;
+        height: 599px;
+        
+    }
+    .slide-controls {
+        display: none;
     }
 }
