wrote code for form animation

--- a/src/pages/marketplace/MarketPlace.scss
+++ b/src/pages/marketplace/MarketPlace.scss
@@ -1,5 +1,7 @@
 //start marketplace header
-
+#marketplace {
+    animation: fadeIn 0.4s linear;
+}
 .marketplace-nav {
     font-size: 18px;
     color: #BCB7B7;
