--- a/src/pages/drop/Drop.scss
+++ b/src/pages/drop/Drop.scss
@@ -5,6 +5,7 @@
 
 }
 #drop {
+    animation: fadeIn 0.4s linear;
     @extend .centerize;
     flex-direction: column;
    h1 {
@@ -14,6 +15,7 @@
    }
    nav {
     width: 100%;
+    display: none;
     
    }
    > p {
@@ -140,8 +142,8 @@
     #drop {
         margin: 2.5rem 7rem;
         nav {
-            display: flex;
-            flex-direction: row;
+           display: block;
+           
             
             font-size: 20px;
             a {
