--- a/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
+++ b/src/pages/marketplace/marketplacedetail/MarketplaceDetail.scss
@@ -1,3 +1,6 @@
+#marketplace-detail {
+    animation: fadeIn 0.4s linear;
+}
 .detail-header {
     font-size: 18px;
     border-bottom: 0.5px solid #333333;
