--- a/src/pages/cart/components/ShippingDetails.scss
+++ b/src/pages/cart/components/ShippingDetails.scss
@@ -1,17 +1,19 @@
 #shipping-details {
+    margin-bottom: 4rem;
     form {
         display: flex;
         flex-direction: column;
-        padding: 0 0.5rem;
+        padding: 0 0.7rem;
         margin-bottom: 1rem;
     }
     input[type='text'], input[type='email'], input[type='number'], select {
         height: 50px;
-        background: #F2F2F2;
+        background: #ebe9e9;
         border: 0.5px solid #c7c7c7;
         border-radius: 10px;
         text-indent: 1rem;
         margin-bottom: 1rem;
+        font-size: 18px;
         &::placeholder {
             color: #888888;
         }
@@ -28,6 +30,20 @@
         font-size: 18px;
        
     }
+    .updates {
+        font-weight: 400;
+        font-size: 15px;
+        
+        display: flex;
+        align-items: flex-start;
+        margin-top: 0;
+        text-align: left;
+        
+        input {
+            margin-right: 0.5rem;
+        }
+        //justify-content: center;
+    }
     
     input[type='checkbox'] {
         margin-bottom: 0.05rem;
@@ -35,26 +51,15 @@
 
     
 }
-.updates {
-    font-weight: 400;
-    font-size: 13px;
-    text-indent: 0.5rem;
-    display: flex;
-    align-items: center;
-    margin-top: 0;
-    //justify-content: center;
-}
-.updates {
-    font-weight: 400;
-    font-size: 13px;
-    color: red;
-}
+
+
 
 @media only screen and (min-width:760px) {
 
     #shipping-details {
         input[type='text'], input[type='email'], input[type='number'], select {
             height: 76px;
+            font-size: 26px;
         }
         label {
             font-size: 26px;
