--- a/src/pages/cart/paymentDetails/PaymentDetails.scss
+++ b/src/pages/cart/paymentDetails/PaymentDetails.scss
@@ -7,10 +7,10 @@
     // }
     p {
         line-height: 157.6%;
-        font-size: 16px;
+        //font-size: 16px;
         margin-left: 0.8rem;
         margin-bottom: 1.7rem;
-        color: #747474;
+        //color: #747474;
     }
     label {
         font-size: 18px;
@@ -34,6 +34,7 @@
             margin-bottom: 1.7rem;
             margin-top: 1rem;
             font-size: 18px;
+             
 
             &::placeholder {
                 color: #888888;
@@ -92,8 +93,12 @@
         border-radius: 4px;
         color: white;
         border: none;
-        margin: auto;
         font-size: 17.5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+       
     }
     
 }
@@ -113,5 +118,101 @@
     margin-bottom: 3rem;
 }
 
+@media only screen and (min-width:760px) {
+    #payment-details {
+        padding: 1rem 5rem;
+        .payment-method {
+            font-weight: 500;
+            font-size: 28px;
+            color: #292929;
+        }
+    }
+    .secure-server {
+        font-weight: 400;
+        font-size: 24px;
+    }
+    
+}
 
+#payment-summary {
+    h3 {
+        font-weight: 500;
+        font-size: 28px;
+        border-bottom: 1px solid #d4d3d3;
+        padding-bottom: 2.5rem;
+       
+    }
+   > :nth-child(2), > :nth-child(3) {
+        border-bottom: 1px solid #d4d3d3;
+        font-size: 24px;
+        color: #292929;
+    }
+    > * {
+        padding: 1.5rem 0;
+        
+        //margin: 1rem 0;
+    
+        }
+    
+}
+.products-sum {
+    margin-top: 1rem;
+    div {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1.5rem;
+        
+        :last-child {
+            color: #292929;
+            
+        }
+        
+    }
+    p {
+        color: #747474;
+        font-size: 28px;
+        
+    }
+   
+    
+
+}
+
+@media only screen and (min-width:760px) {
+    #form {
+        background: #fcfcfc;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
+        padding: 2rem 1rem;
+        
+    }
+    #payment-details {
+        padding: 0 8rem;
+        .confirm-payment {
+            width: 100%;
+            margin: 3.5rem auto 0;
+            height: 87px;
+            font-size: 32px;
+        }
+        p {
+            
+            line-height: 45px;
+            margin-bottom: 0;
+        }
+        .select-wallet {
+            font-weight: 500;
+            font-size: 28px;
+            text-indent: 1.5rem;
+        }
+    }
+    .form-flex {
+        margin-top: 1.5rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-around;
+        //justify-content: space-between;
+    }
+   
+    
+}
 
