--- a/src/pages/cart/paymentDetails/PaymentDetails.scss
+++ b/src/pages/cart/paymentDetails/PaymentDetails.scss
@@ -116,10 +116,14 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 3rem;
-    * {
-        width: 42px;
-        height: 42px;
-        border-radius: 50%;
+    
+    > * {
+       // width: 42px;
+        //height: 42px;
+        //border-radius: 50%;
+        margin-left: 0.1rem;
+        background-color: #28A814;
+        padding: 0;
     }
 }
 
