--- a/src/pages/cart/paymentDetails/PaymentDetails.scss
+++ b/src/pages/cart/paymentDetails/PaymentDetails.scss
@@ -25,7 +25,7 @@
         color: #747474;
         
 
-        input[type='text'] {
+        input[type='text'], input[type='password'] {
             height: 50px;
             background: #ebe9e9;
             border: 0.5px solid #c7c7c7;
@@ -116,15 +116,15 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 3rem;
-    
-    > * {
-       // width: 42px;
-        //height: 42px;
-        //border-radius: 50%;
-        margin-left: 0.1rem;
-        background-color: #28A814;
+    svg, img {
+        
+        width: 42px;
+        height: 42px;
+       
         padding: 0;
     }
+    
+
 }
 
 @media only screen and (min-width:760px) {
@@ -134,6 +134,13 @@
             font-weight: 500;
             font-size: 28px;
             color: #292929;
+        }
+        .select-wallet{
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+        label {
+            font-size: 24px;
         }
     }
     .secure-server {
@@ -186,6 +193,21 @@
     
 
 }
+.wallet-box {
+    
+    position: relative; 
+    input {
+        padding-top: 0.55rem;
+        
+    }
+    svg {
+        width: 29px;
+        height: 29px;
+        position: absolute;
+        right: 15px;
+        top: 40%
+    }
+}
 
 @media only screen and (min-width:760px) {
     #form {
@@ -194,9 +216,40 @@
         border-radius: 8px;
         padding: 2rem 1rem;
         
+
+       
+        
+    }
+    .wallet-box {
+    
+        position: relative; 
+        svg {
+            width: 38px;
+            height: 38px;
+            right: 20px;
+            top: 40%
+        }
     }
     #payment-details {
         padding: 0 8rem;
+       
+        form {
+            margin-top: 2.7rem;
+            input[type='text'], input[type='password'] {
+                height: 60px;
+                &::placeholder {
+                    font-size: 24px;
+                    text-indent: 1.5rem;
+                }
+                
+            }
+        }
+        .wallet-details {
+            font-size: 20px;
+            align-items: center;
+            margin-bottom: 2rem;
+            margin-top: 1rem;
+        }
         .confirm-payment {
             width: 100%;
             margin: 3.5rem auto 0;
@@ -205,13 +258,14 @@
         }
         p {
             
-            line-height: 45px;
+            
             margin-bottom: 0;
         }
         .select-wallet {
             font-weight: 500;
             font-size: 28px;
-            text-indent: 1.5rem;
+            margin-left: 0.5rem;
+            text-indent: 1rem;
         }
     }
     .form-flex {
@@ -224,7 +278,38 @@
     .form-head {
         display: flex;
         align-items: center;
+        flex-direction: row;
         justify-content: space-between;
+        margin-bottom: 0.7rem;
+    }
+    .wallet-icons {
+        svg, img {
+            width: 50px;
+            height: 50px;
+        }
+
+        // &:first-child {
+        //     display: none;
+           
+        // }
+        // &:last-child {
+        //     display: block;
+        // }
+
+    }
+     .wallet-icons {
+        margin-bottom: 0;
+    }
+
+    #payment-summary {
+        p {
+            line-height: 45px;
+        }
+    }
+    .payment-flex {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 0.7rem;
     }
    
     
