--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,9 +1,13 @@
 main {
     padding-top: 0rem;
     width: 100%;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     place-items: center;
     animation: fadeIn 0.4s linear;
+    
    
 }
 
@@ -32,6 +36,7 @@ main {
     
 }
 .slide {
+    
     margin: 0 auto;
     width: 100%;
    
@@ -50,11 +55,14 @@ main {
         padding-top: 1.5rem;
     }
     .hero {
-        width: 100%;
+        //width: 100%;
+        
+        //background-color: red;
+        
        
         h1 {
             font-size: 70px;
-            width: 900px;
+            //width: 900px;
             max-width: 900px;
             line-height: 6.2rem;
         }
@@ -62,15 +70,17 @@ main {
             font-size: 26px;
             
             line-height: 2.5rem;
-            width: 750px;
+            //width: 750px;
             max-width: 750px;
         }
         .slide {
-            height: 300px;
-            background-color: blue;
-            display: block;
-            width: 300px;
-            margin-top: 3rem;
+            display: flex;
+            overflow: hidden;
+            //height: 400px;
+            
+            width: 100%;
+            margin-top: 0rem;
+            border: none;
         }
     }
     .hero-mobile {
@@ -80,6 +90,38 @@ main {
 
 //end hero section
 
+//start carousel section
+.slide-images {
+    display: flex;
+    width: 100%;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    img {
+        margin: 0 0.425rem;
+        //width: 320px;
+        //margin-right: 0.85rem;
+
+    }
+    
+    
+}
+
+.slide-container {
+    width: 320px;
+    //height: 400px;
+    flex: 0 0 auto;
+    display: none;
+    overflow-x: hidden;
+   margin: 0 0.25rem;
+    //background-color: red;
+   
+    
+}
+@media only screen and (min-width: 760px) {
+    .slide-container {
+        display: flex;
+    }
+}
+//end carousel section
 
 //start featured product section
 .featured {
@@ -156,6 +198,7 @@ main {
     padding-bottom: 1.2rem;
     .arrow {
         display: none;
+        cursor: pointer;
     }
     .people {
         width: 130px;
@@ -240,6 +283,9 @@ main {
            align-items: center;
            padding-top: 0;
            padding-bottom: 0.5rem;
+           opacity: 0;
+           transition: opacity 0.4s ease-in-out;
+
            h3:nth-child(1) {
             display: none;
            }
@@ -248,12 +294,15 @@ main {
             font-weight: 300;
             font-size: 38px;
            }
-            display: none;
+           
+           
         }
         &:hover {
             transform: scale(1.005);
             .shadow {
-                display: flex;
+                
+                opacity: 1;
+                transition: opacity 0.4s ease-in-out;
             }
            
            
@@ -398,7 +447,7 @@ main {
     justify-content: flex-end;
     margin-right: 1rem;
     align-items: center;
-    button {
+    :last-child {
         margin-left: 1.5rem;
         background-color: transparent;
         color: white;
@@ -408,8 +457,11 @@ main {
         padding-right: 0.4rem;
         border-radius: 10px;
         cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    a {
+    :first-child {
         border-bottom: 2px solid white;
         white-space: nowrap;
     }
@@ -533,14 +585,14 @@ table {
     }
     .links {
         margin-bottom: 0;
-        button {
+        :last-child {
             height: 62px;
             font-size: 24px;
             padding-left: 1rem;
             padding-right: 1rem;
             margin-left: 2rem;
         }
-        a {
+        :first-child {
             font-size: 24px;
         }
     }
@@ -610,6 +662,14 @@ table {
         font-size: 15px;
         margin-top: 1.6rem;
     }
+    img {
+        position: absolute;
+        bottom: -30px;
+        right: 15px;
+        transition: all 2s linear;
+        width: 250px;
+        z-index: 100;
+    }
     
 }
 .year {
@@ -638,8 +698,14 @@ table {
         p:nth-of-type(1) {
             font-size: 32px;
             line-height: 3rem;
-            width: 1148px;
+            max-width: 1148px;
             margin-top: 5rem;
+        }
+        img {
+            width: 600px;
+            bottom: -50px;
+            right: 15%;
+            z-index: 10;
         }
         
     }
